...
                                                <rect key="frame" x="0.0" y="0.0" width="103" height="44"/>
                                                <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="HbC-tV-blF"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Pixeled" family="Pixeled" pointSize="9"/>
                                                <state key="normal" title="EDIT GOAL">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <segue destination="1yK-gH-ams" kind="presentation" id="jAd-0g-slz"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m83-8h-27s">
                                                <rect key="frame" x="113" y="0.0" width="103" height="44"/>
                                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" name="Pixeled" family="Pixeled" pointSize="9"/>
                                                <state key="normal" title="DISMISS">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="animateCarViewOut" destination="902-Bv-zdx" eventType="touchUpInside" id="Esq-nG-a98"/>
                                                </connections>
                                            </button>
...
                        <viewControllerLayoutGuide type="bottom" id="cRJ-5n-gHT"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="cyZ-vw-wQV">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="bxm-sc-fQk">
                                <rect key="frame" x="112" y="206" width="96" height="96"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="bxm-sc-fQk" secondAttribute="height" id="xIv-Td-kFu"/>
                                </constraints>
                            </imageView>
                            <progressView hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="0pl-AW-3sy">
...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C72-4y-k6j">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gtA-Cl-Mlg">
                                        <rect key="frame" x="269" y="15" width="36" height="30"/>
                                        <fontDescription key="fontDescription" name="Pixeled" family="Pixeled" pointSize="9"/>
                                        <state key="normal" title="DONE">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="dismiss" destination="1yK-gH-ams" eventType="touchUpInside" id="mmo-KE-onJ"/>
                                        </connections>
                                    </button>
...
